# stratigraph

./: LICENSE.txt  README.md  environment.yml  pyproject.toml  setup.py
data/: TDWB_17_1_Subside.csv  Topo_TDB_10_1_D.mat  Topo_TDB_10_1_M.mat  Topo_TDB_10_1_P.mat  XES_02_sealevel_and_scantimes.csv  wheeler_figure_01.tif  wheeler_figure_02.tif  wheeler_figure_03.tif  wheeler_figure_04.tif  wheeler_figure_05.tif  wheeler_figure_06.tif  wheeler_figure_07.tif  wheeler_figure_08.tif  wheeler_figure_09.tif  wheeler_figure_10.tif  wheeler_figure_11.tif
data/XES_02_topography/: gridscan001.txt
notebooks/: Stratigraph_Barrell_and_Wheeler_original_plots.ipynb  Stratigraph_Tulane_experiments.ipynb  Stratigraph_XES_02.ipynb
stratigraph/: Stratigraph_Barrell_and_Wheeler_original_plots.ipynb  Stratigraph_Tulane_experiments.ipynb  Stratigraph_XES_02.ipynb  Stratigraph_example.ipynb  Stratigraph_meanderpy_model.ipynb  __init__.py  environment.yml  stratigraph.py
