[build-system]
requires = ["setuptools>=68", "setuptools-scm>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stratigraph"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
  { name="Zoltan Sylvester", email="zoltan.sylvester@beg.utexas.edu" },
]
description = "Stratigraphic visualization and analysis"
license = {file = "LICENSE.txt"}
readme = "README.md"
keywords = ["geology", "geoscience", "stratigraphy", "chronostratigraphy", "visualization"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy<2.0",        # NumPy 2 might break some things.
    "scipy",
    "scikit-learn",
    "scikit-image",
    "shapely",
    "pillow",
    "matplotlib",
    "mayavi",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["stratigraph"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[project.urls]
"Homepage" = "https://github.com/zsylvester/stratigraph"
"Bug Tracker" = "https://github.com/zsylvester/stratigraph/issues"